Bug 1883532 [Linux] Call gdk_window_set_override_redirect() on toplevel GdkWindow r=emilio"

Differential Revision: https://phabricator.services.mozilla.com/D216155